asegurando el principio de responsabilidad única en print_page()

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "cSpell.language": "es-ES",
     "cSpell.words": [
-        "AUTHORS"
+        "AUTHORS",
+        "Inoro",
+        "noro"
     ]
 }
