--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,10 @@
     "cSpell.language": "es-ES",
     "cSpell.words": [
         "AUTHORS",
+        "ethernet",
         "Inoro",
-        "noro"
+        "Movistar",
+        "noro",
+        "Ubiquiti"
     ]
 }
