--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
     "cSpell.words": [
         "AUTHORS",
         "ethernet",
+        "firmware",
         "Inoro",
         "Movistar",
         "noro",
