cambios en el título de la página principal y del archivo

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "cSpell.language": "es-ES",
     "cSpell.words": [
         "AUTHORS",
+        "cantarinas",
         "ethernet",
         "firmware",
         "Inoro",
