mejoradas las paletas de colores && optimiza la imagen de 404

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "ethernet",
         "firmware",
         "Inoro",
+        "minimalista",
         "Movistar",
         "noro",
         "Ubiquiti"
