feat(nginx): :sparkles: considerando si hacer direcciones 100% amigables

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,5 +10,9 @@
         "Movistar",
         "noro",
         "Ubiquiti"
+    ],
+    "conventionalCommits.scopes": [
+        "make",
+        "nginx"
     ]
 }
