--- a/docker/local/nginx/record.localhost.conf
+++ b/docker/local/nginx/record.localhost.conf
@@ -8,6 +8,9 @@ server {
         # First attempt to serve request as file, then
         # as directory, then fall back to displaying a 404.
         try_files $uri $uri/ =404;
+        # try_files $uri $uri/ /index.php?page=404.html;
+        # try_files $uri $uri/ /index.php?page=$request_uri;
+        # rewrite
     }
 
     # Pass the PHP scripts to PHP-FPM listening on 127.0.0.1:9000
