chore(page): :memo: mejorada redacción sobre rss

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,8 @@
     ],
     "conventionalCommits.scopes": [
         "make",
-        "nginx"
+        "nginx",
+        "page",
+        "css"
     ]
 }
