--- a/docker/local/nginx/record.localhost.conf
+++ b/docker/local/nginx/record.localhost.conf
@@ -1,6 +1,6 @@
 server {
     listen 80 default_server;
-    server_name record.localhost;
+    server_name record.rat.localhost;
     root /var/www/html;
     index index.php;
 
@@ -13,11 +13,12 @@ server {
         # rewrite
     }
 
-    # Pass the PHP scripts to PHP-FPM listening on 127.0.0.1:9000
+    # Pass the PHP scripts to PHP-FPM listening on unix:/run/php-fpm.sock
+    # see: /etc/php8/php-fpm.d/www.conf
     location ~ \.php$ {
         try_files $uri =404;
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass 127.0.0.1:9000;
+        fastcgi_pass unix:/run/php-fpm.sock;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_param SCRIPT_NAME $fastcgi_script_name;
         fastcgi_index index.php;
