--- a/.github/workflows/new-page-workflow.yml
+++ b/.github/workflows/new-page-workflow.yml
@@ -13,6 +13,9 @@ jobs:
         with:
           python-version: '3.10'
 
+      - name: Install rss-update.py dependencies
+        run: pip install -r rss-update-dependencies.txt
+
       - name: Run rss-update.py
         run: python scripts/rss-update.py
 
