test(cicd-rss): probando a ver si actualiza el rss

--- a/.github/workflows/new-page-workflow.yml
+++ b/.github/workflows/new-page-workflow.yml
@@ -4,7 +4,7 @@ on:
     paths:
       - 'public/pages/**.html'
 jobs:
-  build:
+  update-rss:
     name: Update RSS feed
     runs-on: ubuntu-latest
     steps:
