fix(cicd-sitemapgen): necesito abrir el puerto 80 para descargar el nuevo sitemap con curl

--- a/.github/workflows/update-sitemap.yml
+++ b/.github/workflows/update-sitemap.yml
@@ -42,6 +42,8 @@ jobs:
       credentials:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
+      ports:
+        - 80
     steps:
       - name: Checkout
         uses: actions/checkout@v3
