--- a/.github/workflows/update-sitemap.yml
+++ b/.github/workflows/update-sitemap.yml
@@ -53,10 +53,10 @@ jobs:
         password: ${{ secrets.DOCKERHUB_TOKEN }}
       ports:
         - 80
-      options: --user ${{ needs.configure.outputs.uid_gid }}
+      # options: --user ${{ needs.configure.outputs.uid_gid }}
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+      # - name: Checkout
+      #   uses: actions/checkout@v3
 
       - name: Get info
         run: |
@@ -65,7 +65,8 @@ jobs:
           netstat -tunlp
 
       - name: Generate new sitemap
-        run: curl -v http://localhost/generate-sitemap.php -o public/sitemap.xml
+        # run: curl -v http://localhost/generate-sitemap.php -o public/sitemap.xml
+        run: curl -v http://localhost/generate-sitemap.php -o sitemap.xml
 
       - name: Commit if there are changes
         run: |
