--- a/.github/workflows/update-sitemap.yml
+++ b/.github/workflows/update-sitemap.yml
@@ -51,8 +51,8 @@ jobs:
       credentials:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
-      ports:
-        - 80:80
+      # ports:
+      #   - 80:80
       # options: --user ${{ needs.configure.outputs.uid_gid }}
     steps:
       # - name: Checkout
@@ -66,7 +66,7 @@ jobs:
 
       - name: Generate new sitemap
         # run: curl -v http://localhost/generate-sitemap.php -o public/sitemap.xml
-        run: curl -v http://localhost/generate-sitemap.php -o sitemap.xml
+        run: curl -v http://127.0.0.11/generate-sitemap.php -o sitemap.xml
 
       - name: Commit if there are changes
         run: |
