--- a/.github/workflows/update-sitemap.yml
+++ b/.github/workflows/update-sitemap.yml
@@ -92,8 +92,8 @@ jobs:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
       options: --user ${{ needs.configure.outputs.uid_gid }}
-      # volumes:
-      #   - 
+      volumes:
+        - ${{ env.GITHUB_WORKSPACE }}/public:/public
     services:
       sitemapgen:
         image: docker.io/1noro/record.rat.la:sitemapgen-${{ github.sha }}
@@ -102,23 +102,21 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
         ports:
           - 8080:80
-        # options: --user ${{ needs.configure.outputs.uid_gid }}
     steps:
 
       - name: Generate new sitemap
-        # run: curl -v http://localhost/generate-sitemap.php -o public/sitemap.xml
-        run: curl -v http://sitemapgen:8080/generate-sitemap.php -o sitemap.xml
+        run: curl -v http://localhost/generate-sitemap.php -o /public/sitemap.xml
 
-      # - name: Commit if there are changes
-      #   run: |
-      #     # refrescamos los índices de git
-      #     git update-index -q --refresh
-      #     # comprobamos si hay cambios locales
-      #     if [ -z "$(git diff-index --name-only HEAD --)" ]; then exit 0; fi
-      #     # setup the username and email. I tend to use 'GitHub Actions Bot' with no email by default
-      #     git config user.name "GitHub Actions Bot"
-      #     git config user.email "<>"
-      #     # Stage the file, commit and push
-      #     git add public/rss.xml
-      #     git commit -m "chore(rss): updated rss.xml"
-      #     git push origin ${GITHUB_REF#refs/heads/}
+      - name: Commit if there are changes
+        run: |
+          # refrescamos los índices de git
+          git update-index -q --refresh
+          # comprobamos si hay cambios locales
+          if [ -z "$(git diff-index --name-only HEAD --)" ]; then exit 0; fi
+          # setup the username and email. I tend to use 'GitHub Actions Bot' with no email by default
+          git config user.name "GitHub Actions Bot"
+          git config user.email "<>"
+          # Stage the file, commit and push
+          git add public/rss.xml
+          git commit -m "chore(rss): updated rss.xml"
+          git push origin ${GITHUB_REF#refs/heads/}
