--- a/.github/workflows/update-sitemap.yml
+++ b/.github/workflows/update-sitemap.yml
@@ -93,7 +93,7 @@ jobs:
         password: ${{ secrets.DOCKERHUB_TOKEN }}
       options: --user ${{ needs.configure.outputs.uid_gid }}
       volumes:
-        - ${{ env.GITHUB_WORKSPACE }}/public:/public
+        - ${{ github.workspace }}/public:/public
     services:
       sitemapgen:
         image: docker.io/1noro/record.rat.la:sitemapgen-${{ github.sha }}
