--- a/.github/workflows/update-sitemap.yml
+++ b/.github/workflows/update-sitemap.yml
@@ -105,7 +105,7 @@ jobs:
     steps:
 
       - name: Generate new sitemap
-        run: curl -v http://localhost/generate-sitemap.php -o /public/sitemap.xml
+        run: curl -v http://sitemapgen:8080/generate-sitemap.php -o /public/sitemap.xml
 
       - name: Commit if there are changes
         run: |
