--- a/.github/workflows/update-sitemap.yml
+++ b/.github/workflows/update-sitemap.yml
@@ -19,6 +19,12 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
+      - name: Get info
+        run: |
+          ls -las /public
+          id -u
+          id -g
+
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
@@ -93,7 +99,7 @@ jobs:
         password: ${{ secrets.DOCKERHUB_TOKEN }}
       options: --user ${{ needs.configure.outputs.uid_gid }}
       volumes:
-        - ${{ github.workspace }}/public:/public
+        - $GITHUB_WORKSPACE/public:/public
     services:
       sitemapgen:
         image: docker.io/1noro/record.rat.la:sitemapgen-${{ github.sha }}
