--- a/.github/workflows/update-sitemap.yml
+++ b/.github/workflows/update-sitemap.yml
@@ -98,8 +98,8 @@ jobs:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
       options: --user ${{ needs.configure.outputs.uid_gid }}
-      volumes:
-        - $GITHUB_WORKSPACE/public:/public
+      # volumes:
+      #   - $GITHUB_WORKSPACE/public:/public
     services:
       sitemapgen:
         image: docker.io/1noro/record.rat.la:sitemapgen-${{ github.sha }}
@@ -112,12 +112,12 @@ jobs:
 
       - name: Get info
         run: |
-          ls -las /public
+          ls -las
           id -u
           id -g
 
-      - name: Generate new sitemap
-        run: curl -v http://sitemapgen:8080/generate-sitemap.php -o /public/sitemap.xml
+      # - name: Generate new sitemap
+      #   run: curl -v http://sitemapgen:8080/generate-sitemap.php -o /public/sitemap.xml
 
       # - name: Commit if there are changes
       #   run: |
