test: a ver que hay en public

--- a/.github/workflows/update-sitemap.yml
+++ b/.github/workflows/update-sitemap.yml
@@ -115,6 +115,7 @@ jobs:
         run: |
           pwd
           ls -las
+          ls -las public
           ls -las /public
           id -u
           id -g
