--- a/.github/workflows/update-sitemap.yml
+++ b/.github/workflows/update-sitemap.yml
@@ -94,13 +94,13 @@ jobs:
     needs: [build-sitemapgen-image, configure]
     runs-on: ubuntu-latest
     container:
-      image: docker.io/curlimages/curl
+      image: docker.io/1noro/cicd-tools:latest
       credentials:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
       options: --user ${{ needs.configure.outputs.uid_gid }}
-      volumes:
-        - /home/runner/work/record.rat.la/record.rat.la/public:/public
+      # volumes:
+      #   - /home/runner/work/record.rat.la/record.rat.la/public:/public
     services:
       sitemapgen:
         image: docker.io/1noro/record.rat.la:sitemapgen-${{ github.sha }}
@@ -110,29 +110,31 @@ jobs:
         ports:
           - 8080:80
     steps:
+      - name: Checkout
+        uses: actions/checkout@v3
 
       - name: Get info
         run: |
           pwd
           ls -las
           ls -las public
-          ls -las /public
+          # ls -las /public
           id -u
           id -g
 
       - name: Generate new sitemap
-        run: curl -v http://sitemapgen:8080/generate-sitemap.php -o /public/sitemap.xml
+        run: curl -v http://sitemapgen:8080/generate-sitemap.php -o public/sitemap.xml
 
-      # - name: Commit if there are changes
-      #   run: |
-      #     # refrescamos los índices de git
-      #     git update-index -q --refresh
-      #     # comprobamos si hay cambios locales
-      #     if [ -z "$(git diff-index --name-only HEAD --)" ]; then exit 0; fi
-      #     # setup the username and email. I tend to use 'GitHub Actions Bot' with no email by default
-      #     git config user.name "GitHub Actions Bot"
-      #     git config user.email "<>"
-      #     # Stage the file, commit and push
-      #     git add public/rss.xml
-      #     git commit -m "chore(rss): updated rss.xml"
-      #     git push origin ${GITHUB_REF#refs/heads/}
+      - name: Commit if there are changes
+        run: |
+          # refrescamos los índices de git
+          git update-index -q --refresh
+          # comprobamos si hay cambios locales
+          if [ -z "$(git diff-index --name-only HEAD --)" ]; then exit 0; fi
+          # setup the username and email. I tend to use 'GitHub Actions Bot' with no email by default
+          git config user.name "GitHub Actions Bot"
+          git config user.email "<>"
+          # Stage the file, commit and push
+          git add public/rss.xml
+          git commit -m "chore(rss): updated rss.xml"
+          git push origin ${GITHUB_REF#refs/heads/}
