--- a/.github/workflows/update-sitemap.yml
+++ b/.github/workflows/update-sitemap.yml
@@ -129,6 +129,7 @@ jobs:
         run: |
           # refrescamos los índices de git
           git update-index -q --refresh
+          git branch -a
           # comprobamos si hay cambios locales
           if [ -z "$(git diff-index --name-only HEAD --)" ]; then exit 0; fi
           # setup the username and email. I tend to use 'GitHub Actions Bot' with no email by default
