--- a/.github/workflows/update-sitemap.yml
+++ b/.github/workflows/update-sitemap.yml
@@ -112,6 +112,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+        with:
+          ref: ${{ github.head_ref }}
 
       - name: Get info
         run: |
@@ -129,7 +131,6 @@ jobs:
         run: |
           # refrescamos los índices de git
           git update-index -q --refresh
-          git branch -a
           # comprobamos si hay cambios locales
           if [ -z "$(git diff-index --name-only HEAD --)" ]; then exit 0; fi
           # setup the username and email. I tend to use 'GitHub Actions Bot' with no email by default
