--- a/docker/prod/nginx/record.rat.la.conf
+++ b/docker/prod/nginx/record.rat.la.conf
@@ -1,6 +1,9 @@
+server_tokens off;
+
 server {
-    server_name record.rat.la;
-    root /var/www/record.rat.la/public;
+    listen 80 default_server;
+    server_name record.rat.localhost;
+    root /var/www/html;
     index index.php;
 
     location / {
@@ -9,14 +12,16 @@ server {
         try_files $uri $uri/ =404;
     }
 
-    # pass PHP scripts to FastCGI server
+    # Pass the PHP scripts to PHP-FPM listening on unix:/run/php-fpm.sock
+    # see: /etc/php8/php-fpm.d/www.conf
     location ~ \.php$ {
-        include snippets/fastcgi-php.conf;
-
-        # With php-fpm (or other unix sockets):
-        fastcgi_pass unix:/run/php/php7.3-fpm.sock;
-        # With php-cgi (or other tcp sockets):
-        #fastcgi_pass 127.0.0.1:9000;
+        try_files $uri =404;
+        fastcgi_split_path_info ^(.+\.php)(/.+)$;
+        fastcgi_pass unix:/run/php-fpm.sock;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_param SCRIPT_NAME $fastcgi_script_name;
+        fastcgi_index index.php;
+        include fastcgi_params;
     }
 
     # deny access to .htaccess files, if Apache's document root
@@ -25,30 +30,10 @@ server {
         deny all;
     }
 
-    listen [::]:443 ssl http2 ipv6only=on; # managed by Certbot
-    listen 443 ssl http2; # managed by Certbot
-    ssl_certificate /etc/letsencrypt/live/record.rat.la/fullchain.pem; # managed by Certbot
-    ssl_certificate_key /etc/letsencrypt/live/record.rat.la/privkey.pem; # managed by Certbot
-    #include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
-    ssl_ciphers EECDH+CHACHA20:EECDH+AES128:RSA+AES128:EECDH+AES256:RSA+AES256:EECDH+3DES:RSA+3DES:!MD5;
-    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
-
     # Politica de cache
     # (lo que recomienda google es 365d, pero yo creo que 30d esta bien)
     # added by cosmo 202009271454
     location ~*  \.(jpg|jpeg|png|gif|ico|css|js|webp|webm|svg)$ {
         expires 365d;
     }
-}
-
-server {
-    if ($host = record.rat.la) {
-        return 301 https://$host$request_uri;
-    } # managed by Certbot
-
-    listen 80 default_server;
-    listen [::]:80 default_server;
-
-    server_name record.rat.la;
-    return 404; # managed by Certbot
 }
