--- a/.github/workflows/build-deploy-prod.yml
+++ b/.github/workflows/build-deploy-prod.yml
@@ -40,6 +40,15 @@ jobs:
     needs: build-prod-image
     runs-on: ubuntu-latest
     steps:
+      - name: Docker login
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.PROD_HOST }}
+          username: ${{ secrets.PROD_HOST_USER }}
+          key: ${{ secrets.ACTIONS_SSH_PRIVATE_KEY }}
+          port: ${{ secrets.PROD_HOST_SSH_PORT }}
+          script: docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_TOKEN }}
+
       - name: Stop & delete current container
         uses: appleboy/ssh-action@master
         with:
@@ -47,9 +56,7 @@ jobs:
           username: ${{ secrets.PROD_HOST_USER }}
           key: ${{ secrets.ACTIONS_SSH_PRIVATE_KEY }}
           port: ${{ secrets.PROD_HOST_SSH_PORT }}
-          script: |
-            docker stop record.rat.la-container
-            docker rm record.rat.la-container
+          script: docker stop record.rat.la-container
 
       - name: Deploy new version
         uses: appleboy/ssh-action@master
