feat: agregado el arg VERSION al dockerfile

--- a/.github/workflows/build-deploy-prod.yml
+++ b/.github/workflows/build-deploy-prod.yml
@@ -33,6 +33,8 @@ jobs:
           target: prod
           no-cache: true
           push: true
+          build-args: |
+            VERSION=${{ github.sha }}
           tags: 1noro/record.rat.la:prod-${{ github.sha }}
 
   deploy-prod:
