refactor: ajustando las github actions a la nueva estructura de pages

--- a/.github/workflows/public-pages-updated.yml
+++ b/.github/workflows/public-pages-updated.yml
@@ -3,7 +3,7 @@ on:
   pull_request:
     branches: [ master ]
     paths:
-      - 'public/pages/**.html'
+      - 'public/pages/**/**.html'
       - 'public/index.html'
 jobs:
   configure:
