style: mejorada la fuente, los textos y las imágenes de la web

--- a/docker/prod/nginx/record.rat.la.conf
+++ b/docker/prod/nginx/record.rat.la.conf
@@ -62,7 +62,7 @@ server {
     # Politica de cache
     # (lo que recomienda google es 365d, pero yo creo que 30d esta bien)
     # added by cosmo 202009271454
-    location ~*  \.(jpg|jpeg|png|gif|ico|css|js|webp|webm|svg)$ {
+    location ~* \.(jpg|jpeg|png|gif|ico|css|js|webp|webm|svg|ttf)$ {
         expires 365d;
     }
 }
