fix(cicd): Public pages updated no se lanzaba al actualizar index.php

--- a/.github/workflows/public-pages-updated.yml
+++ b/.github/workflows/public-pages-updated.yml
@@ -4,7 +4,7 @@ on:
     branches: [ master ]
     paths:
       - 'public/pages/**/**.html'
-      - 'public/index.html'
+      - 'public/index.php'
 jobs:
   configure:
     name: Configure
