fix: se cambia la politica de cache
para que siempre se tenga que consultar al revidor si la respuesta php
ha cambiado, evitando problemas al aceptar el popup de las cookies

--- a/docker/local/nginx/record.rat.localhost.conf
+++ b/docker/local/nginx/record.rat.localhost.conf
@@ -40,9 +40,7 @@ server {
         # Cache-Control for PHP
         # https://developer.mozilla.org/es/docs/Web/HTTP/Headers/Cache-Control
         expires 5m;
-        # (debate entre si poner la cabecera private o must-revalidate)
-        # add_header Cache-Control "private";
-        add_header Cache-Control "must-revalidate";
+        add_header Cache-Control "no-cache";
     }
 
     # return 404 for all other php files not matching the front controller
